--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
     {% if site.paginate and site.paginate_path and paginator.page > 1 %}
       Page {{ paginator.page }}
     {% else %}
-      Contents
+    
     {% endif %}
   </h1>
 
@@ -68,5 +68,10 @@ layout: default
   
   {% endif %}
     
+    <p>I am a number theorist whose research spreads across arithmetic statistics,
+        Diophantine geometry, arithmetic dynamics, analytic number theory and geometry of numbers.<p>
+    <br>
+    <br>
+    <p>pierre &#8734; leboudec &#8734; unibas &#8734; ch<p>
 
 </main>
