--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,10 +68,12 @@ layout: default
   
   {% endif %}
     
+  <center>
     <p>I am a number theorist whose research spreads across arithmetic statistics,
         Diophantine geometry, arithmetic dynamics, analytic number theory and geometry of numbers.<p>
     <br>
     <br>
     <p>pierre &#8734; leboudec &#8734; unibas &#8734; ch<p>
+  <center>  
 
 </main>
