--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -1,6 +1,6 @@
 .post {
   background: white;
-  margin: 2em auto;
+  margin: 0em auto 2em;
   max-width: 60rem;
   padding: 2em 0;
   box-shadow: 12px 18px 24px rgba(darken($brand-color, 50%), .1);
