--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,8 @@
-$brand-color:         #fede00;
+$brand-color:         #7ED5EA;
+$menu-color:          #3778C2;
 $highlight:           lighten($brand-color, 35%);
-$text-color:          #0b0404;
-$muted-text-color:    #64644B;
+$text-color:          #000000;
+$muted-text-color:    #808080;
 $font-family:         "EB Garamond", Garamond, "Times New Roman", serif;
 
 $on-bigphone:         375px;
