--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,4 @@
-$brand-color:         #84CEEB;
+$brand-color:         #7ED5EA;
 $menu-color:          #7ED5EA;
 $highlight:           lighten($brand-color, 35%);
 $text-color:          #000000;
