--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
-$brand-color:         #7ED5EA;
-$menu-color:          #7ED5EA;
+$brand-color:         #84CEEB;
+$menu-color:          #84CEEB;
 $highlight:           lighten($brand-color, 35%);
 $text-color:          #000000;
 $muted-text-color:    #808080;
