--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,8 +19,8 @@ h2 {
 
 h3 {
   font-size: 1.5em;
-  margin: 1.3333em auto;
-  text-align: center;
+  margin: 1.5em auto;
+  text-align: left;
 }
 
 h4 {
