--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -47,6 +47,11 @@
   margin-right: 1.5rem;
 }
 
+.post table {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 .post-content:first-child {
   margin-top: 4em;
 }
