--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -19,7 +19,7 @@
 
 .site-navigation li {
   list-style: none;
-  font-size: .875em;
+  font-size: 1em;
   font-variant: small-caps;
   margin: 0 1em;
   &.active a {
