--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,9 +25,8 @@ h3 {
 
 h4 {
   font-size: 1.25em;
-  font-style: italic;
-  margin: 1.875em auto;
-  text-align: center;
+  margin: 0.2em auto;
+  text-align: left;
 }
 
 h5 {
