--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,8 +24,8 @@ h3 {
 }
 
 h4 {
-  font-size: 1.25em;
-  margin: 0.2em auto;
+  font-size: 1.1em;
+  margin: 0 auto 0.1em;
   text-align: left;
 }
 
