--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,13 +19,13 @@ h2 {
 
 h3 {
   font-size: 1.5em;
-  margin: 1em auto 0.2em;
+  margin: 1em auto 0.1em;
   text-align: left;
 }
 
 h4 {
   font-size: 1.2em;
-  margin: 0 auto 0.1em;
+  margin: 0 auto;
   text-align: left;
 }
 
