--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,12 @@
       {%- include google-analytics.html -%}
     {%- endif -%}
 
+    {% if page.usemathjax %}
+      <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+      </script>
+    {% end if %}
+
   </head>
   <body>
 
