--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,15 +18,13 @@
       {%- include google-analytics.html -%}
     {%- endif -%}
 
-    {% if page.usemathjax %}
-      <script type="text/javascript" async
-      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-      </script>
-    {% end if %}
-
   </head>
   <body>
 
+    {% if page.usemathjax %}
+      <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    {% end if %}
+    
     {{ content }}
 
     {% unless site.hide_search %}
