--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@ layout: default
     <br>
     <br>
     <br>
-    <p>pierre \(\infty\) leboudec \(\Theta\) unibas \(\infty\) ch<p>
+    <p>pierre \(\infty\) leboudec \(\otimes\) unibas \(\infty\) ch<p>
   <center>  
 
 </main>
